--- a/index.html
+++ b/index.html
@@ -2,39 +2,50 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Prestige Griffin</title>
-  <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css"/>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body { font-family: 'Inter', sans-serif; }
-    .text-gold-400 { color: #FFD700; }
+    .text-gold { color: #FFD700; }
+    .bg-glass {
+      background: rgba(255, 255, 255, 0.05);
+      backdrop-filter: blur(10px);
+      border: 1px solid rgba(255, 255, 255, 0.1);
+    }
   </style>
 </head>
 <body class="bg-black text-white">
-  <header class="text-center py-10 border-b border-gray-800">
-    <img src="PG.png" alt="Prestige Griffin Logo" class="mx-auto w-24 md:w-32 mb-4" />
-    <h1 class="text-4xl md:text-5xl font-bold text-gold-400">Prestige Griffin</h1>
-    <p class="text-gray-400 mt-2">Strategic Capital · Fintech Innovation · Elite Defense</p>
-    <nav class="mt-6">
-      <a href="index.html" class="mx-4 text-gold-400 font-semibold">Home</a>
-      <a href="about.html" class="mx-4 text-gray-400">About</a>
-      <a href="services.html" class="mx-4 text-gray-400">Services</a>
-      <a href="contact.html" class="mx-4 text-gray-400">Contact</a>
+
+  <!-- Navbar -->
+  <header class="text-center py-8">
+    <img src="PG.png" alt="Prestige Griffin Logo" class="mx-auto w-24 mb-3"/>
+    <h1 class="text-4xl font-bold text-gold" style="font-family: 'Playfair Display', serif;">Prestige Griffin</h1>
+    <p class="text-gray-400 mt-2">Capital · Technology · Defense</p>
+    <nav class="mt-4">
+      <a href="index.html" class="mx-3 text-gold font-semibold">Home</a>
+      <a href="about.html" class="mx-3 text-gray-400 hover:text-gold">About</a>
+      <a href="services.html" class="mx-3 text-gray-400 hover:text-gold">Services</a>
+      <a href="contact.html" class="mx-3 text-gray-400 hover:text-gold">Contact</a>
     </nav>
   </header>
 
-  <section class="text-center py-28 bg-gradient-to-b from-black via-zinc-900 to-black" data-aos="fade-down">
-    <h2 class="text-4xl font-extrabold mb-4 text-gold-400">Elite Access. Global Influence.</h2>
-    <p class="text-gray-300 max-w-xl mx-auto text-lg">
-      Welcome to Prestige Griffin — where high-impact capital meets cutting-edge fintech and world-class defense strategy.
+  <!-- Hero -->
+  <section class="text-center py-20 bg-gradient-to-b from-black via-zinc-900 to-black" data-aos="fade-up">
+    <h2 class="text-5xl font-bold text-gold mb-6" style="font-family: 'Playfair Display', serif;">Elite Access. Global Reach.</h2>
+    <p class="text-lg text-gray-300 max-w-2xl mx-auto">
+      Unlock strategic capital, build cutting-edge fintech, and access sovereign-level defense consultancy — all under one roof.
     </p>
+    <a href="contact.html" class="inline-block mt-8 px-6 py-3 bg-gold text-black font-semibold rounded-full hover:scale-105 transition-transform">Engage With Us</a>
   </section>
 
-  <footer class="text-center py-6 text-gray-500 border-t border-gray-800 mt-16">
-    &copy; 2025 Prestige Griffin. All rights reserved.
+  <!-- Footer -->
+  <footer class="text-center text-gray-500 py-6 border-t border-gray-800">
+    © 2025 Prestige Griffin. All rights reserved.
   </footer>
+
   <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
   <script>AOS.init();</script>
 </body>
