--- a/contact.html
+++ b/contact.html
@@ -2,39 +2,41 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Contact | Prestige Griffin</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Contact - Prestige Griffin</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
   <style>
-    body { margin: 0; font-family: 'Segoe UI', sans-serif; background: linear-gradient(to bottom, #7c0a02, #1a1a1a); color: #f0d9b5; }
-    header { background: radial-gradient(circle, #800000 0%, #1a0000 100%); text-align: center; padding: 60px 20px 40px; }
-    .logo { width: 180px; }
-    nav a { margin: 0 15px; text-decoration: none; color: #f0d9b5; font-weight: bold; border-bottom: 2px solid transparent; }
-    nav a:hover, nav a.active { border-color: #ffd700; }
-    .form { padding: 40px 20px; text-align: center; }
-    input, textarea { width: 90%; padding: 12px; margin: 8px 0; border-radius: 8px; border: none; }
-    button { background: #ffd700; color: #1a1a1a; padding: 12px 25px; border: none; font-size: 1rem; border-radius: 30px; cursor: pointer; }
-    footer { text-align: center; padding: 20px; background: #120202; color: #999; }
+    body { background-color: #800000; color: white; font-family: 'Poppins', sans-serif; }
+    .gold-text { color: #D4AF37; }
+    .gold-bg { background-color: #D4AF37; color: black; }
+    .input, textarea { background-color: transparent; border: 1px solid #D4AF37; color: white; }
+    .input::placeholder, textarea::placeholder { color: #f5f5f5; }
+    .section { padding-top: 5rem; padding-bottom: 5rem; }
   </style>
 </head>
 <body>
-  <header>
-    <img src="PG.png" alt="Prestige Griffin Logo" class="logo" />
-    <h1>Contact Us</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="services.html">Services</a>
-      <a href="contact.html" class="active">Contact</a>
+
+<header class="bg-[#800000] fixed w-full z-50 shadow-md">
+  <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
+    <a href="index.html" class="text-xl font-bold gold-text">Prestige Griffin</a>
+    <nav class="hidden md:flex space-x-6 text-white">
+      <a href="about.html" class="hover:text-[#D4AF37]">About</a>
+      <a href="services.html" class="hover:text-[#D4AF37]">Services</a>
+      <a href="contact.html" class="text-[#D4AF37]">Contact</a>
     </nav>
-  </header>
-  <section class="form">
-    <h2>Send us a message</h2>
-    <form>
-      <input type="text" placeholder="Your Name" required /><br />
-      <input type="email" placeholder="Your Email" required /><br />
-      <textarea placeholder="Your Message" rows="5" required></textarea><br />
-      <button type="submit">Send</button>
-    </form>
-  </section>
-  <footer>&copy; 2025 Prestige Griffin. All rights reserved.</footer>
+  </div>
+</header>
+
+<section class="section text-center px-6 pt-24">
+  <h2 class="text-3xl font-bold mb-6 gold-text">Let’s Work Together</h2>
+  <p class="mb-8 text-lg text-white">We partner with leaders who aren’t afraid to rethink what’s possible.</p>
+  <form class="space-y-4 text-left max-w-lg mx-auto">
+    <input type="text" placeholder="Your Name" class="w-full px-4 py-2 input rounded" required />
+    <input type="email" placeholder="Email Address" class="w-full px-4 py-2 input rounded" required />
+    <textarea placeholder="Your Message" rows="4" class="w-full px-4 py-2 input rounded" required></textarea>
+    <button type="submit" class="gold-bg font-semibold px-6 py-2 rounded hover:bg-yellow-400 transition w-full">Send Message</button>
+  </form>
+</section>
+
 </body>
 </html>
