--- a/index.html
+++ b/index.html
@@ -2,43 +2,44 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Prestige Griffin</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css"/>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
   <style>
-    body { font-family: 'Inter', sans-serif; }
-    .text-gold { color: #FFD700; }
+    body { font-family: 'Poppins', sans-serif; background-color: #800000; color: white; }
+    .gold-text { color: #D4AF37; }
+    .gold-bg { background-color: #D4AF37; }
+    .section { padding-top: 5rem; padding-bottom: 5rem; }
   </style>
 </head>
-<body class="bg-black text-white">
+<body>
 
-  <header class="text-center py-8">
-    <img src="PG.png" alt="Prestige Griffin Logo" class="mx-auto w-24 mb-3"/>
-    <h1 class="text-4xl font-bold text-gold" style="font-family: 'Playfair Display', serif;">Prestige Griffin</h1>
-    <p class="text-gray-400 mt-2">Capital · Technology · Defense</p>
-    <nav class="mt-4">
-      <a href="index.html" class="mx-3 text-gold font-semibold">Home</a>
-      <a href="about.html" class="mx-3 text-gray-400 hover:text-gold">About</a>
-      <a href="services.html" class="mx-3 text-gray-400 hover:text-gold">Services</a>
-      <a href="contact.html" class="mx-3 text-gray-400 hover:text-gold">Contact</a>
+<header class="bg-[#800000] fixed w-full z-50 shadow-md">
+  <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
+    <div class="flex items-center space-x-3">
+      <img src="logo.png" alt="Prestige Griffin Logo" class="h-10 w-auto">
+      <span class="text-xl font-bold gold-text">Prestige Griffin</span>
+    </div>
+    <nav class="hidden md:flex space-x-6 text-white">
+      <a href="about.html" class="hover:text-[#D4AF37]">About</a>
+      <a href="services.html" class="hover:text-[#D4AF37]">Services</a>
+      <a href="contact.html" class="hover:text-[#D4AF37]">Contact</a>
     </nav>
-  </header>
+  </div>
+</header>
 
-  <section class="text-center py-20 bg-gradient-to-b from-black via-zinc-900 to-black" data-aos="fade-up">
-    <h2 class="text-5xl font-bold text-gold mb-6" style="font-family: 'Playfair Display', serif;">Elite Access. Global Reach.</h2>
-    <p class="text-lg text-gray-300 max-w-2xl mx-auto">
-      Unlock strategic capital, build cutting-edge fintech, and access sovereign-level defense consultancy — all under one roof.
-    </p>
-    <a href="contact.html" class="inline-block mt-8 px-6 py-3 bg-gold text-black font-semibold rounded-full hover:scale-105 transition-transform">Engage With Us</a>
-  </section>
+<section class="min-h-screen flex items-center justify-center text-center px-6 pt-24 section">
+  <div class="max-w-3xl">
+    <h1 class="text-5xl font-bold gold-text mb-6 leading-tight">Precision in Execution.<br> Power in Partnership.</h1>
+    <p class="text-xl text-white mb-8">We architect and accelerate digital change for the world’s most ambitious companies.</p>
+    <a href="contact.html" class="gold-bg text-black px-6 py-3 rounded-full font-semibold hover:bg-yellow-500 transition">Get In Touch</a>
+  </div>
+</section>
 
-  <footer class="text-center text-gray-500 py-6 border-t border-gray-800">
-    © 2025 Prestige Griffin. All rights reserved.
-  </footer>
+<footer class="bg-[#800000] text-[#D4AF37] py-6 text-center text-sm">
+  &copy; 2025 Prestige Griffin. All rights reserved.
+</footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
-  <script>AOS.init();</script>
 </body>
 </html>
