--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <img src="PG.png" alt="Prestige Griffin Logo" class="h-12 w-auto rounded-full border border-[#D4AF37]" />
+
   <title>Prestige Griffin</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
@@ -14,13 +16,12 @@
   </style>
 </head>
 <body>
-
 <header class="bg-[#800000] fixed w-full z-50 shadow-md">
   <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
-    <div class="flex items-center space-x-3">
-      <img src="logo.png" alt="Prestige Griffin Logo" class="h-10 w-auto">
+    <a href="index.html" class="flex items-center space-x-2">
+      <img src="PG.png" alt="Prestige Griffin Logo" class="h-10 w-auto" />
       <span class="text-xl font-bold gold-text">Prestige Griffin</span>
-    </div>
+    </a>
     <nav class="hidden md:flex space-x-6 text-white">
       <a href="about.html" class="hover:text-[#D4AF37]">About</a>
       <a href="services.html" class="hover:text-[#D4AF37]">Services</a>
@@ -40,6 +41,5 @@
 <footer class="bg-[#800000] text-[#D4AF37] py-6 text-center text-sm">
   &copy; 2025 Prestige Griffin. All rights reserved.
 </footer>
-
 </body>
 </html>
