--- a/index.html
+++ b/index.html
@@ -2,42 +2,38 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-   <img src="PG.png" alt="Prestige Griffin Logo" class="h-12 w-auto rounded-full border border-[#D4AF37]" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Prestige Griffin</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
   <style>
-    body { font-family: 'Poppins', sans-serif; background-color: #800000; color: white; }
+    body { background-color: #800000; color: white; font-family: 'Poppins', sans-serif; }
     .gold-text { color: #D4AF37; }
-    .gold-bg { background-color: #D4AF37; }
+    .gold-bg { background-color: #D4AF37; color: black; }
     .section { padding-top: 5rem; padding-bottom: 5rem; }
   </style>
 </head>
 <body>
-<header class="bg-[#800000] fixed w-full z-50 shadow-md">
-  <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
-    <a href="index.html" class="flex items-center space-x-2">
-      <img src="PG.png" alt="Prestige Griffin Logo" class="h-10 w-auto" />
-      <span class="text-xl font-bold gold-text">Prestige Griffin</span>
-    </a>
-    <nav class="hidden md:flex space-x-6 text-white">
-      <a href="about.html" class="hover:text-[#D4AF37]">About</a>
-      <a href="services.html" class="hover:text-[#D4AF37]">Services</a>
-      <a href="contact.html" class="hover:text-[#D4AF37]">Contact</a>
-    </nav>
-  </div>
-</header>
+  <header class="bg-[#800000] fixed w-full z-50 shadow-md">
+    <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
+      <a href="index.html" class="flex items-center space-x-3">
+        <img src="PG.png" alt="Prestige Griffin Logo" class="h-12 w-auto rounded-full border border-[#D4AF37]" />
+        <span class="text-2xl font-bold gold-text">Prestige Griffin</span>
+      </a>
+      <nav class="hidden md:flex space-x-6 text-white">
+        <a href="about.html" class="hover:text-[#D4AF37]">About</a>
+        <a href="services.html" class="hover:text-[#D4AF37]">Services</a>
+        <a href="contact.html" class="hover:text-[#D4AF37]">Contact</a>
+      </nav>
+    </div>
+  </header>
 
-<section class="min-h-screen flex items-center justify-center text-center px-6 pt-24 section">
-  <div class="max-w-3xl">
-    <h1 class="text-5xl font-bold gold-text mb-6 leading-tight">Precision in Execution.<br> Power in Partnership.</h1>
-    <p class="text-xl text-white mb-8">We architect and accelerate digital change for the world’s most ambitious companies.</p>
-    <a href="contact.html" class="gold-bg text-black px-6 py-3 rounded-full font-semibold hover:bg-yellow-500 transition">Get In Touch</a>
-  </div>
-</section>
-
-<footer class="bg-[#800000] text-[#D4AF37] py-6 text-center text-sm">
-  &copy; 2025 Prestige Griffin. All rights reserved.
-</footer>
+  <section class="min-h-screen flex items-center justify-center text-center px-6 pt-24 section">
+    <div class="max-w-3xl">
+      <h1 class="text-5xl font-bold gold-text mb-6 leading-tight">Precision in Execution.<br> Power in Partnership.</h1>
+      <p class="text-xl text-white mb-8">We architect and accelerate digital change for the world’s most ambitious companies.</p>
+      <a href="contact.html" class="gold-bg text-black px-6 py-3 rounded-full font-semibold hover:bg-yellow-500 transition">Get In Touch</a>
+    </div>
+  </section>
 </body>
 </html>
