--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
   <!-- Splash Screen -->
   <div class="splash">
-    <img src="PG.png" alt="Prestige Griffin Logo">
+    <img src="PG.png" alt="Prestige Griffin Logo" class="h-20 w-auto rounded-full border-2 border-[#D4AF37] shadow-lg" />
     <h1>Finance • Technology • Defence</h1>
   </div>
 
