--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contact - Prestige Griffin</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
   <style>
     body { background-color: #800000; color: white; font-family: 'Poppins', sans-serif; }
@@ -15,28 +16,29 @@
   </style>
 </head>
 <body>
+  <header class="bg-[#800000] fixed w-full z-50 shadow-md">
+    <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
+      <a href="index.html" class="flex items-center space-x-3">
+        <img src="PG.png" alt="Prestige Griffin Logo" class="h-12 w-auto rounded-full border border-[#D4AF37]" />
+        <span class="text-2xl font-bold gold-text">Prestige Griffin</span>
+      </a>
+      <nav class="hidden md:flex space-x-6 text-white">
+        <a href="about.html" class="hover:text-[#D4AF37]">About</a>
+        <a href="services.html" class="hover:text-[#D4AF37]">Services</a>
+        <a href="contact.html" class="text-[#D4AF37]">Contact</a>
+      </nav>
+    </div>
+  </header>
 
-<header class="bg-[#800000] fixed w-full z-50 shadow-md">
-  <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
-    <a href="index.html" class="text-xl font-bold gold-text">Prestige Griffin</a>
-    <nav class="hidden md:flex space-x-6 text-white">
-      <a href="about.html" class="hover:text-[#D4AF37]">About</a>
-      <a href="services.html" class="hover:text-[#D4AF37]">Services</a>
-      <a href="contact.html" class="text-[#D4AF37]">Contact</a>
-    </nav>
-  </div>
-</header>
-
-<section class="section text-center px-6 pt-24">
-  <h2 class="text-3xl font-bold mb-6 gold-text">Let’s Work Together</h2>
-  <p class="mb-8 text-lg text-white">We partner with leaders who aren’t afraid to rethink what’s possible.</p>
-  <form class="space-y-4 text-left max-w-lg mx-auto">
-    <input type="text" placeholder="Your Name" class="w-full px-4 py-2 input rounded" required />
-    <input type="email" placeholder="Email Address" class="w-full px-4 py-2 input rounded" required />
-    <textarea placeholder="Your Message" rows="4" class="w-full px-4 py-2 input rounded" required></textarea>
-    <button type="submit" class="gold-bg font-semibold px-6 py-2 rounded hover:bg-yellow-400 transition w-full">Send Message</button>
-  </form>
-</section>
-
+  <section class="section text-center px-6 pt-24">
+    <h2 class="text-3xl font-bold mb-6 gold-text">Let’s Work Together</h2>
+    <p class="mb-8 text-lg text-white">We partner with leaders who aren’t afraid to rethink what’s possible.</p>
+    <form class="space-y-4 text-left max-w-lg mx-auto">
+      <input type="text" placeholder="Your Name" class="w-full px-4 py-2 input rounded" required />
+      <input type="email" placeholder="Email Address" class="w-full px-4 py-2 input rounded" required />
+      <textarea placeholder="Your Message" rows="4" class="w-full px-4 py-2 input rounded" required></textarea>
+      <button type="submit" class="gold-bg font-semibold px-6 py-2 rounded hover:bg-yellow-400 transition w-full">Send Message</button>
+    </form>
+  </section>
 </body>
 </html>
