--- a/services.html
+++ b/services.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Services - Prestige Griffin</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
   <style>
     body { background-color: #800000; color: white; font-family: 'Poppins', sans-serif; }
@@ -12,35 +13,36 @@
   </style>
 </head>
 <body>
-
-<header class="bg-[#800000] fixed w-full z-50 shadow-md">
-  <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
-    <a href="index.html" class="text-xl font-bold gold-text">Prestige Griffin</a>
-    <nav class="hidden md:flex space-x-6 text-white">
-      <a href="about.html" class="hover:text-[#D4AF37]">About</a>
-      <a href="services.html" class="text-[#D4AF37]">Services</a>
-      <a href="contact.html" class="hover:text-[#D4AF37]">Contact</a>
-    </nav>
-  </div>
-</header>
-
-<section class="section px-6 text-center pt-24">
-  <h2 class="text-3xl font-bold mb-12 gold-text">Our Services</h2>
-  <div class="grid md:grid-cols-3 gap-10 max-w-6xl mx-auto">
-    <div class="p-6 border border-[#D4AF37] rounded-lg">
-      <h3 class="text-xl font-semibold gold-text mb-2">Digital Product Development</h3>
-      <p>We build digital tools that unlock new value, from mobile apps to enterprise-grade systems.</p>
+  <header class="bg-[#800000] fixed w-full z-50 shadow-md">
+    <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
+      <a href="index.html" class="flex items-center space-x-3">
+        <img src="PG.png" alt="Prestige Griffin Logo" class="h-12 w-auto rounded-full border border-[#D4AF37]" />
+        <span class="text-2xl font-bold gold-text">Prestige Griffin</span>
+      </a>
+      <nav class="hidden md:flex space-x-6 text-white">
+        <a href="about.html" class="hover:text-[#D4AF37]">About</a>
+        <a href="services.html" class="text-[#D4AF37]">Services</a>
+        <a href="contact.html" class="hover:text-[#D4AF37]">Contact</a>
+      </nav>
     </div>
-    <div class="p-6 border border-[#D4AF37] rounded-lg">
-      <h3 class="text-xl font-semibold gold-text mb-2">Strategy & Transformation</h3>
-      <p>We partner with leadership to embed clarity, speed, and structure at every level.</p>
-    </div>
-    <div class="p-6 border border-[#D4AF37] rounded-lg">
-      <h3 class="text-xl font-semibold gold-text mb-2">UX & Systems Design</h3>
-      <p>We turn complexity into elegant, scalable, human-centered solutions.</p>
-    </div>
-  </div>
-</section>
+  </header>
 
+  <section class="section px-6 text-center pt-24">
+    <h2 class="text-3xl font-bold mb-12 gold-text">Our Services</h2>
+    <div class="grid md:grid-cols-3 gap-10 max-w-6xl mx-auto">
+      <div class="p-6 border border-[#D4AF37] rounded-lg">
+        <h3 class="text-xl font-semibold gold-text mb-2">Digital Product Development</h3>
+        <p>We build digital tools that unlock new value, from mobile apps to enterprise-grade systems.</p>
+      </div>
+      <div class="p-6 border border-[#D4AF37] rounded-lg">
+        <h3 class="text-xl font-semibold gold-text mb-2">Strategy & Transformation</h3>
+        <p>We partner with leadership to embed clarity, speed, and structure at every level.</p>
+      </div>
+      <div class="p-6 border border-[#D4AF37] rounded-lg">
+        <h3 class="text-xl font-semibold gold-text mb-2">UX & Systems Design</h3>
+        <p>We turn complexity into elegant, scalable, human-centered solutions.</p>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
