--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About - Prestige Griffin</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
   <style>
     body { background-color: #800000; color: white; font-family: 'Poppins', sans-serif; }
@@ -12,27 +13,28 @@
   </style>
 </head>
 <body>
+  <header class="bg-[#800000] fixed w-full z-50 shadow-md">
+    <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
+      <a href="index.html" class="flex items-center space-x-3">
+        <img src="PG.png" alt="Prestige Griffin Logo" class="h-12 w-auto rounded-full border border-[#D4AF37]" />
+        <span class="text-2xl font-bold gold-text">Prestige Griffin</span>
+      </a>
+      <nav class="hidden md:flex space-x-6 text-white">
+        <a href="about.html" class="text-[#D4AF37]">About</a>
+        <a href="services.html" class="hover:text-[#D4AF37]">Services</a>
+        <a href="contact.html" class="hover:text-[#D4AF37]">Contact</a>
+      </nav>
+    </div>
+  </header>
 
-<header class="bg-[#800000] fixed w-full z-50 shadow-md">
-  <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
-    <a href="index.html" class="text-xl font-bold gold-text">Prestige Griffin</a>
-    <nav class="hidden md:flex space-x-6 text-white">
-      <a href="about.html" class="text-[#D4AF37]">About</a>
-      <a href="services.html" class="hover:text-[#D4AF37]">Services</a>
-      <a href="contact.html" class="hover:text-[#D4AF37]">Contact</a>
-    </nav>
-  </div>
-</header>
-
-<section class="section text-center px-6 pt-24">
-  <div class="max-w-4xl mx-auto">
-    <h2 class="text-3xl font-bold mb-6 gold-text">Who We Are</h2>
-    <p class="text-lg leading-relaxed text-white">
-      Prestige Griffin is a strategic digital consulting firm helping forward-thinking enterprises engineer scalable transformation through software, systems design, and operational clarity.<br><br>
-      Our teams combine elite technical acumen with business-first thinking to deliver meaningful outcomes — faster. We exist to empower the builders, rethinkers, and disruptors of tomorrow.
-    </p>
-  </div>
-</section>
-
+  <section class="section text-center px-6 pt-24">
+    <div class="max-w-4xl mx-auto">
+      <h2 class="text-3xl font-bold mb-6 gold-text">Who We Are</h2>
+      <p class="text-lg leading-relaxed text-white">
+        Prestige Griffin is a strategic digital consulting firm helping forward-thinking enterprises engineer scalable transformation through software, systems design, and operational clarity.<br><br>
+        Our teams combine elite technical acumen with business-first thinking to deliver meaningful outcomes — faster. We exist to empower the builders, rethinkers, and disruptors of tomorrow.
+      </p>
+    </div>
+  </section>
 </body>
 </html>
