--- a/index.html
+++ b/index.html
@@ -153,10 +153,10 @@
     <header>
       <img src="PG.png" alt="Prestige Griffin Logo">
       <nav>
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Services</a>
-        <a href="#">Contact</a>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="services.html">Services</a>
+        <a href="contact.html">Contact</a>
       </nav>
     </header>
 
