--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 <body>
   <header>
     <div class="brand">
-      <img src="/mnt/data/PG.png" alt="Prestige Griffin Logo">
+      <img src="PG.png" alt="Prestige Griffin Logo">
       <h1>Prestige Griffin</h1>
     </div>
     <nav>
