--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
       padding: 1rem 2rem;
       border-bottom: 2px solid var(--gold);
       background-color: var(--primary-red);
+      position: fixed; 
+      top: 0;             
+      left: 0;
+      width: 100%;       
+      z-index: 1000;  
     }
     .brand {
       display: flex;
