--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       justify-content: space-between;
       align-items: center;
       padding: 1rem 2rem;
+      margin-left: 45rem;
       border-bottom: 2px solid var(--gold);
       background-color: var(--primary-red);
       position: fixed; 
