--- a/index.html
+++ b/index.html
@@ -22,17 +22,18 @@
     }
     header {
       display: flex;
-      justify-content: space-between;
       align-items: center;
       padding: 1rem 2rem;
       border-bottom: 2px solid var(--gold);
       background-color: var(--primary-red);
-      position: fixed; 
-      top: 0;             
+      position: fixed;
+      top: 0;
       left: 0;
-      width: 100%;       
-      z-index: 1000;  
-    }
+      width: 100%;
+      z-index: 1000;
+      justify-content: flex-start; /* Align items to start */
+      gap: 40rem; /* Space between brand and nav */
+          }
     .brand {
       display: flex;
       align-items: center;
